--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-typescript": "^7.21.4",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@types/lodash": "^4.14.192",
+    "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "css-loader": "^6.7.3",
@@ -36,6 +37,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "monaco-editor": "^0.37.1",
-    "monaco-editor-webpack-plugin": "^7.0.1"
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "prettier": "^2.8.8"
   }
 }
