--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@types/react-resizable": "^3.0.4",
     "babel-loader": "^9.1.2",
     "idb-keyval": "^6.2.1",
     "monaco-editor": "^0.37.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "path-browserify": "^1.0.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "react-resizable": "^3.0.5"
   }
 }
