--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
-    "@types/react-resizable": "^3.0.4",
     "@types/localforage": "^0.0.34",
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/react-resizable": "^3.0.4",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.2",
     "esbuild-wasm": "^0.17.19",
@@ -47,6 +48,7 @@
     "monaco-editor-webpack-plugin": "^7.0.1",
     "path-browserify": "^1.0.1",
     "prettier": "^2.8.8",
+    "react-beautiful-dnd": "^13.1.1",
     "react-resizable": "^3.0.5"
   }
 }
